--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /* Color customization */
 :root {
-  --primary: #f9c412;
+  --primary: #fcda06;
   --primary-dark: #e7bf60;
 }
 
@@ -602,7 +602,7 @@ th {
   vertical-align: top;
 }
 thead th {
-  border-bottom: 1px solid #f9c412;
+  border-bottom: 1px solid #fcda06;
 }
 table {
   display: table;
@@ -635,7 +635,7 @@ kbd {
   color: #7ec699;
 }
 mark {
-  background: #f9c412;
+  background: #fcda06;
   padding: 0 0.3em;
 }
 h1,
@@ -652,7 +652,7 @@ h6 {
   font-style: italic;
 }
 a {
-  color: #f9c412;
+  color: #fcda06;
   text-decoration: none;
 }
 a:hover {
@@ -780,7 +780,7 @@ input[type="submit"][disabled] {
 button:not([disabled]),
 button[type="submit"],
 input[type="submit"] {
-  background: #f9c412;
+  background: #fcda06;
   color: #181818;
 }
 button:not([disabled]):hover,
@@ -965,10 +965,10 @@ dd {
   margin-left: 2.25em;
 }
 dd + dt {
-  border-top: 1px solid #f9c412;
+  border-top: 1px solid #fcda06;
 }
 blockquote {
-  border-left: 1px solid #f9c412;
+  border-left: 1px solid #fcda06;
   padding: 0 1.5em;
   margin: 1.5em 0 1.5em 1.5em;
 }
